kubernetes/apps/audiobookshelf/audiobookshelf/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
