kubernetes/apps/audiobookshelf/audiobookshelf/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  hostnames:
    - audiobookshelf.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          namespace: audiobookshelf
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
